--- a/task-http/pom.xml
+++ b/task-http/pom.xml
@@ -74,6 +74,14 @@
             <version>1.3.9</version>
         </dependency>
         <dependency>
+            <groupId>com.flipkart.phantom</groupId>
+            <artifactId>dynamic-config-service</artifactId>
+            <version>1.3.9</version>
+            <type>jar</type>
+            <scope>system</scope>
+            <systemPath>/Users/sushantasahoo1/git/Phantom-Dynamic-Configuration/dynamic-config-service/target/dynamic-config-service.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-core</artifactId>
             <version>${com.netflix.hystrix.version}</version>
